--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "loopback-component-storage": "^3.7.0",
     "loopback-connector-mongodb": "^4.2.0",
     "serve-favicon": "^2.0.1",
+    "sharp": "^0.26.1",
     "strong-error-handler": "^3.0.0"
   },
   "devDependencies": {
